--- a/forum/templates/forum/forum_content.html
+++ b/forum/templates/forum/forum_content.html
@@ -171,15 +171,8 @@
 <div class="main-body p-0">
 
     {% include 'forum/snippets/forum_header.html' %}
-
-    <a href="{% url 'forum:forum-topic' %}" class="btn btn-light btn-sm mb-3 has-icon"><i class="fa fa-arrow-left mr-2"></i>Back</a>
-    <button class="btn btn-primary has-icon btn-block" type="button" data-toggle="modal" data-target="#threadModal">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus mr-2">
-            <line x1="12" y1="5" x2="12" y2="19"></line>
-            <line x1="5" y1="12" x2="19" y2="12"></line>
-        </svg>
-        NEW DISCUSSION
-    </button>
+    {% include 'forum/snippets/forum_header_back_to_home.html' %}
+    {% include 'forum/snippets/forum_detail_new_discussion.html' %}
     
     {% include 'forum/snippets/forum_content_list.html' %}
 
