--- a/forum/templates/forum/snippets/css/forum_comment.html
+++ b/forum/templates/forum/snippets/css/forum_comment.html
@@ -23,11 +23,13 @@
 	    background-color: #fff;
 	    border: 1px solid transparent; /* Removes margin collapse */
 	    
-	    color: rgba(0, 0, 0, 0.85);
-	    background: #fff;
+	    color: whitesmoke;
+	    background: #000;
         border-radius:10px;
 	    box-sizing: border-box;
-	}
+		
+		box-shadow: 0.1rem 0.1rem 0.1rem var(--greyLight-2), -0.1rem -0.1rem 0.8rem var(--white);
+	}	
 	.m-0 {
 	    margin: 0;
 	}
@@ -38,6 +40,7 @@
 	    width: 1px;
 	    height: 1px;
 	    overflow: hidden;
+		color: aquamarine;
 	}
 
 	/* Comment */
@@ -74,7 +77,7 @@
 	    margin-left: 10px;
 	}
 	.comment-author {
-	    color: rgba(0, 0, 0, 0.85);
+	    color: blanchedalmond;
 	    font-weight: bold;
 	    text-decoration: none;
 	}
