--- a/forum/templates/forum/snippets/css/tweet_box_css.html
+++ b/forum/templates/forum/snippets/css/tweet_box_css.html
@@ -37,11 +37,12 @@
 
 
     .tweet-wrap {
-      background: #fff;
+      background: #000;
       border-radius:10px;
-      padding: 30px;
+      padding: 20px;
       border-bottom: 1px solid #e6ecf0;
       border-top: 1px solid #e6ecf0;
+      box-shadow: 0.1rem 0.1rem 0.1rem var(--greyLight-2), -0.1rem -0.1rem 0.8rem var(--white);
     }
 
     .tweet-header {
