--- a/forum/templates/forum/snippets/forum_detail_post.html
+++ b/forum/templates/forum/snippets/forum_detail_post.html
@@ -6,16 +6,17 @@
         <div class="vote-wrap">
               <button class="btn btn-transparent p-0" type="submit" id="upvote-{{post.pk}}" onclick="sentAJAX_upvote_post({{post.pk}})">
                 <div id="upvote-div" class="vote {% if request.user in post.upvote.all %}up{% else %}inactive{% endif %}">
-                  <i class="fas fa-chevron-circle-up"></i>
+                  <i class="fas fa-chevron-circle-up" style="margin-right: 0px;"></i>
                 </div>
               </button>
           <div class="stat">
-            <span class="score"><strong id="score">{{post.upvote.all.count|sub:post.downvote.all.count}}</strong>
+            <span class="score">
+              <strong id="score">{{post.upvote.all.count|sub:post.downvote.all.count}}</strong>
             </span>
           </div>
             <button class="btn btn-transparent p-0" type="submit" id="downvote-{{post.pk}}" onclick="sentAJAX_downvote_post({{post.pk}})">
                 <div id="downvote-div" class="vote {% if request.user in post.downvote.all %}down{% else %}inactive{% endif %}">
-                  <i class="fas fa-chevron-circle-down"></i>
+                  <i class="fas fa-chevron-circle-down" style="margin-right: 0px;"></i>
                 </div>
             </button>
         </div>
@@ -26,12 +27,12 @@
             <div class="body-post" style="font-weight:normal; transform: rotate(0);">
                 <a href="{% url 'account:view' user_id=post.author.profile.pk %}" class="text-secondary">{{post.author.username}}</a><span>asked {{ post.created_on|naturaltime }}</span>
                 <small class="text-muted ml-2">({{post.created_on}})</small>
-                <h3 class="mt-3">{{post.title}}</h3>
-                Viewed<span> {{post.view}} times</span>  |  Total Answer<span> {{replies|length}}</span>
+                <h3 class="mt-3" style="color: peachpuff;">{{post.title}}</h3>
+                <span style="color: whitesmoke;">Viewed</span><span style="color: cornsilk;"> {{post.view}} times</span><span style="color: whitesmoke;">  |  Total Answer</span><span style="color: cornsilk;"> {{replies|length}}</span>
                 <hr>
                 <div class="mt-3 font-size-sm">
                     {% autoescape off %}
-                    <p style="text-align: justify;text-justify: inter-word;">{{post.body}}</p>
+                    <p style="text-align: justify;text-justify: inter-word; color: whitesmoke;">{{post.body}}</p>
                     {% endautoescape %}
                 </div>
             </div>
