--- a/post/templates/post/snippets/post_detail_header.html
+++ b/post/templates/post/snippets/post_detail_header.html
@@ -7,11 +7,9 @@
       box-shadow: 0.1rem 0.1rem 0.1rem var(--greyLight-2), -0.1rem -0.1rem 0.8rem var(--white);
     }
 </style>
-<div style="margin-bottom: 5px;">
-    <a href="{% url 'home' %}" style="text-decoration: none;">
-        <span style="position: absolute;width: 100%;height: 100%;top: 0;left: 0;z-index: 1;"></span> 
-    </a>
-    <div class="wrapper">
+
+<a href="{% url 'home' %}" style="text-decoration: none;">    
+    <div class="wrapper mb-1">
         <h3 style="color: aliceblue !important;">Back to Home</h3>
     </div>
-</div>
+</a>
