--- a/post/templates/post/post_list_2.html
+++ b/post/templates/post/post_list_2.html
@@ -201,6 +201,7 @@
     }
 
     function validated(element){
+      console.log("IN");
       let text;
       let maxLength = 100;
       let currentlength = element.innerText.length;
