--- a/templates/snippets/css/twitter_style.html
+++ b/templates/snippets/css/twitter_style.html
@@ -45,15 +45,37 @@
     .r-1iusvr4 {
         flex-basis: 0px;
     }
+    .r-1jgb5lz{
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .r-1ye8kvj{
+        max-width: 800px; /* CHANGE LATER, DEFAULT 600 */
+    }
     .r-16y2uox {
         -moz-box-flex: 1;
         flex-grow: 1;
+    }
+    .r-1h3ijdo{
+        height: 53px;
     }
     .r-a5pmau {
         margin-right: 2px;
     }
     .r-bnwqim {
         position: relative;
+    }
+    .r-1kihuf0{
+        align-self: center;
+    }
+    .r-s224ru{
+        background-color: rgb(0, 186, 124);
+    }
+    .r-1w6e6rj{
+        flex-wrap: wrap;
+    }
+    .r-1mf7evn{
+        margin-right: 20px;
     }
     .r-18u37iz {
         -moz-box-direction: normal;
@@ -63,22 +85,49 @@
     .r-1pi2tsx{
         height: 100%;
     }
+    .r-lltvgl{
+        overflow-x: auto;
+    }
+    .r-buy8e9{
+        overflow-y: hidden;
+    }
+    .r-mfh4gg{
+        scroll-snap-type: x mandatory;
+    }
+    .r-2eszeu{
+        scrollbar-width: none;
+    }
+    .r-hbs49y{
+        transform: translate3d(0px, 0px, 0px);
+    }
     .r-13qz1uu{
         width: 100%;
     }
     .r-q4m81j{
         text-align: center;
     }
+    .r-13zfj0p{
+        color: rgb(47, 51, 54);
+    }
     .r-1777fci{
         -moz-box-pack: center;
         justify-content: center;
     }
+    .r-s8bhmr{
+        min-width: 56px;
+    }
     .r-kzbkwu{
         padding-bottom: 12px;
+    }
+    .r-jwli3a{
+        color: rgb(255, 255, 255);
     }
     .r-1awozwy{
         -moz-box-align: center;
         align-items: center;
+    }
+    .r-1ro0kt6{
+        flex-basis: 0%;
     }
     .r-1hwvwag{
         flex-basis: 48px;
@@ -88,7 +137,7 @@
         flex-grow: 0;
     }
     .r-1b7u577{
-        margin-right: 12px;
+        margin-right: 12px !important;
     }
     .r-zl2h9q{
         margin-bottom: 2px;
@@ -101,12 +150,40 @@
         -moz-box-pack: justify;
         justify-content: space-between;
     }
+    .r-16l9doz{
+        height: auto;
+    }
+    .r-6gpygo{
+        margin-bottom: 12px;
+    }
+    .r-1kb76zh{
+        margin-right: 8px;
+    }
+    .r-2yi16{
+        min-height: 36px;
+    }
+    .r-1qi8awa{
+        min-width: 36px;
+    }
+    .r-icoktb{
+        opacity: 0.5;
+    }
+    .r-2o1y69{
+        margin-top: -15%;
+    }
+    .r-1v6e3re{
+        min-width: 48px;
+    }
+
     .r-1d09ksm {
         -moz-box-align: baseline;
         align-items: baseline;
     }
     .r-1wbh5a2 {
         flex-shrink: 1;
+    }
+    .r-tzz3ar{
+        flex-wrap: nowrap;
     }
     .r-1joea0r {
         margin-left: 20px;
@@ -116,6 +193,19 @@
     }
     .r-1ny4l3l {
         outline-style: none;
+    }
+    .r-1qhn6m8{
+        padding-left: 16px;
+    }
+    .r-i023vh{
+        padding-right: 16px;
+    }
+    .r-4amgru{
+        margin-left: 4px;
+        margin-right: 4px;
+    }
+    .r-orgf3d{
+        opacity: 0;
     }
     .r-1loqt21 {
         cursor: pointer;
@@ -139,8 +229,11 @@
     .r-bztko3{
         overflow: visible;
     }
+    .r-1xce0ei{
+        width: 25%;
+    }
     .r-9ilb82{
-        color: rgb(110, 118, 125);
+        color: rgb(110, 118, 125) !important;
     }
     .r-6koalj{
         display: flex;
@@ -149,10 +242,13 @@
         font-family: "TwitterChirp", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif !important;
     }
     .r-a023e6{
-        font-size: 20px;
+        font-size: 20px !important;
+    }
+    .r-majxgm{
+        font-weight: 500;
     }
     .r-16dba41{
-        font-weight: 400;
+        font-weight: 400 !important;
     }
     .r-19u6a5r{
         margin-left: 12px;
@@ -166,6 +262,19 @@
     .r-rjixqe{
         line-height: 20px;
     }
+    .r-1l7z4oj{
+        padding-bottom: 16px;
+    }
+    .r-95jzfe{
+        padding-top: 16px;
+    }
+    .r-cpa5s6{
+        scroll-snap-align: start;
+    }
+    .r-6b64d0{
+        padding-left: 0px;
+        padding-right: 0px;
+    }
     .r-1h8ys4a{
         padding-top: 4px;
     }
@@ -173,10 +282,16 @@
         white-space: normal;
     }
     .r-bcqeeo{
-        min-width: 0px;
+        min-width: 0px !important;
     }
     .r-o7ynqc{
         transition-duration: 0.2s;
+    }
+    .r-1i6wzkk{
+        transition-property: opacity;
+    }
+    .r-184en5c{
+        z-index: 1;
     }
     .r-clp7b1{
         transition-property: color;
@@ -190,11 +305,14 @@
     .r-xoduu5{
         display: inline-flex;
     }
+    .r-hdaws3{
+        height: 4px;
+    }
     .r-1q142lx{
         flex-shrink: 0;
     }
     .r-4qtqp9{
-        display: inline-block;
+        display: inline-block !important;
     }
     .r-yyyyoo{
         fill: currentcolor;
@@ -202,11 +320,20 @@
     .r-1xvli5t{
         height: 1.25em;
     }
+    .r-1d4mawv{
+        margin-right: 4px;
+    }
     .r-1plcrui{
         vertical-align: text-bottom;
     }
     .r-lrvibr{
         user-select: none;
+    }
+    .r-13awgt0{
+        flex: 1 1 0%;
+    }
+    .r-19wmn03{
+        width: 20px;
     }
     .r-1hdv0qi{
         width: 1.25em;
@@ -240,6 +367,10 @@
     }
     .r-6416eg{
         transition-property: background-color, box-shadow;
+    }
+    .r-obd0qt{
+        -moz-box-align: end;
+        align-items: flex-end;
     }
     .r-15zivkp{
 
@@ -399,6 +530,9 @@
     }
     .r-135wba7{
     	line-height: 24px !important; 
+    }
+    .r-56xrmm{
+        line-height: 12px !important;
     }
     .r-n6v787{
     	font-size: 13px;
