--- a/account/templates/account/account_backup.html
+++ b/account/templates/account/account_backup.html
@@ -1,14 +1,10 @@
-{% extends 'layout-blank.html' %}
+{% extends 'personal/home_wide.html' %}
 {% load static %}
 
-{% block content %}
+{% block post %}
 
 <style>
-body{
-    color: #1a202c;
-    text-align: left;
-    background-color: #e2e8f0;    
-}
+
 .main-body {
     padding: 15px;
 }
@@ -372,34 +368,6 @@ body{
                 </div>
               </div>
             </div>
-            <!--
-            <div class="col-sm-6 mb-3">
-              <div class="card h-100">
-                <div class="card-body">
-                  <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">assignment</i>Project Status</h6>
-                  <small>Web Design</small>
-                  <div class="progress mb-3" style="height: 5px">
-                    <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <small>Website Markup</small>
-                  <div class="progress mb-3" style="height: 5px">
-                    <div class="progress-bar bg-primary" role="progressbar" style="width: 72%" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <small>One Page</small>
-                  <div class="progress mb-3" style="height: 5px">
-                    <div class="progress-bar bg-primary" role="progressbar" style="width: 89%" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <small>Mobile Template</small>
-                  <div class="progress mb-3" style="height: 5px">
-                    <div class="progress-bar bg-primary" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <small>Backend API</small>
-                  <div class="progress mb-3" style="height: 5px">
-                    <div class="progress-bar bg-primary" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                </div>
-              </div>
-            </div> -->
           </div>
         </div>
       </div>
@@ -510,4 +478,4 @@ body{
 {% include 'friend/snippets/remove_friend.html' %}
 {% include 'chat/snippets/create_or_return_private_chat.html' %}
 
-{% endblock content %}
+{% endblock post %}
