account profile xcase

--- a/account/templates/account/snippets/account_list_blog.html
+++ b/account/templates/account/snippets/account_list_blog.html
@@ -1,6 +1,7 @@
 {% load humanize %}
 {% load custom_tags %}
 
+{% if blogs %}
 {% for result in blogs %}
 <div class="tweet-wrap infinite-item" >
 <article style="padding-right: 18px; padding-left: 18px; overflow: hidden; flex-direction: row; display: flex; font-size: 20px;">
@@ -99,3 +100,6 @@
     {% endif %}
 </div>
 {% endfor %}
+{% else %}
+<div hx-get="{% url 'account:load-blog-header' user_id=user.pk %}" hx-target="#navTarget" hx-trigger="load">Nothing here yet</div>
+{% endif %}
