--- a/account/templates/account/snippets/account_list_qrep.html
+++ b/account/templates/account/snippets/account_list_qrep.html
@@ -1,6 +1,7 @@
 {% load humanize %}
 {% load custom_tags %}
 
+{% if results %}
 {% for result in results %}
 <div class="tweet-wrap infinite-item">
 <article style="padding-right: 16px; padding-left: 16px; overflow: hidden; flex-direction: row; display: flex; font-size: 20px;">
@@ -102,3 +103,6 @@
 {% endif %}
 </div>
 {% endfor %}
+{% else %}
+<div hx-get="{% url 'account:load-qrep-header' user_id=user.pk %}" hx-target="#navTarget" hx-trigger="load">Nothing here yet</div>
+{% endif %}
